[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "green-grounds-coffee"
version = "0.1.0"
description = "โปรแกรมขายหน้าร้านกาแฟ"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]
